force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <label>Answer</label>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>