force-app/main/default/objects/Answer__c/fields/Event_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Event_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Confirmation</label>
    <referenceTo>Event_Confirmation__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>