force-app/main/default/objects/Answer__c/fields/Event_Question__c.field-meta.xml
<CustomField>
    <fullName>Event_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Question</label>
    <referenceTo>Event_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>